fix: make external links more visible

--- a/SCSS/_blocks/_variables.scss
+++ b/SCSS/_blocks/_variables.scss
@@ -35,4 +35,6 @@
   --accent-3: #b7ad3a;
   --accent-4: #8ac536;
   --accent-5: #3cad7f;
+  --external-link: #307a8e;
+  --external-link-hidden: #307a8e99;
 }
